Lockscreen vertcal -align fix

--- a/src/screens/LockScreen/LockScreen.css
+++ b/src/screens/LockScreen/LockScreen.css
@@ -13,7 +13,8 @@
   );*/
   width: 100vw;
   height: 100vh;
-  display: flex ;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-content: center;
 }
